# scyrillic

./: README.md  pyproject.toml
src/scyrillic/: __init__.py  cli.py
